Add more strict compiler options, upgrade scalatest